# reddit-wallpaper-rotator

./: .gitignore  README.md  WallpaperReddit.sln  build.ps1
installer/: setup.iss
kde/: README.md  install.sh  pyproject.toml  reddit-wallpaper-rotator.desktop  requirements.txt
kde/rwr/: __init__.py  app.py  config.py  images.py  library.py  logger.py  paths.py  reddit.py  rotation.py  ui.py  wallpaper.py
src/WallpaperReddit/: Models.cs  Program.cs  WallpaperReddit.csproj  app.manifest
src/WallpaperReddit/App/: TrayContext.cs
src/WallpaperReddit/Services/: AppPaths.cs  ImageService.cs  Library.cs  Logger.cs  RedditClient.cs  RotationEngine.cs  SettingsStore.cs  StartupManager.cs  WallpaperSetter.cs
src/WallpaperReddit/UI/: MainForm.cs  SettingsForm.cs
